<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/chosen_product_name"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="14dp">

            </TextView>

            <TextView
                android:id="@+id/chosen_product_price"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="14dp">

            </TextView>

            <TextView
                android:id="@+id/chosen_product_count"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/count"
                android:textColor="@color/black"
                android:textSize="14dp">

            </TextView>

            <TextView
                android:id="@+id/chosen_product_amount"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/amount"
                android:textColor="@color/black"
                android:textSize="14dp">

            </TextView>

        </LinearLayout>

    </RelativeLayout>
</LinearLayout>