<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/product_name"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="16sp">

            </TextView>

            <TextView
                android:id="@+id/product_price"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="16sp">

            </TextView>

            <TextView
                android:id="@+id/product_count"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/count" />

            <TextView
                android:id="@+id/product_amount"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/amount" />

        </LinearLayout>

    </RelativeLayout>
</LinearLayout>